traffic-splitting-demo/htttp-route-definition.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend-app-traffic-split
spec:
  parentRefs:
    - name: envoy-gateway
  hostnames:
    - "www.example.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: backend-svc
          port: 3000
          #weight: 5
        - group: ""
          kind: Service
          name: backend-v2-svc
          port: 3000
          #weight: 5
      matches:
        - path:
            type: PathPrefix
            value: /
